--- a/padawan/templates/home/index.html
+++ b/padawan/templates/home/index.html
@@ -17,7 +17,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-    <link rel="icon" type="image/png" href="/static/images/favicon.png">
+    <link rel="icon" type="image/png" href="/static/images/favicon.ico">
 
 </head>
 <body>
@@ -29,9 +29,8 @@
           <a class="button button-primary" href="http://getskeleton.com">Try Skeleton</a>
         </div>
         <div class="one-half column phones">
-          <img class="phone" src="/static/images/iphone.png">
-          <img class="phone" src="/static/images/iphone.png">
-          <img class="phone" src="/static/images/iphone.png">
+          <img class="phone" src="/static/images/grogu.png">
+          <img class="phone" src="/static/images/grogu.png">
         </div>
       </div>
     </div>
@@ -73,10 +72,10 @@
       <p class="section-description">Skeleton images sit easily in grid with .u-max-full-width class. I suggest exploring solution to serving different images based on device size.</p>
       <div class="row">
         <div class="one-half column category">
-          <img class="u-max-full-width" src="/static/images/placeholder.png">
+          <img class="u-max-full-width" src="/static/images/mandalorian1.png">
         </div>
         <div class="one-half column category">
-          <img class="u-max-full-width" src="/static/images/placeholder.png">
+          <img class="u-max-full-width" src="/static/images/mandalorian2.png">
         </div>
       </div>
     </div>
