--- a/padawan/templates/home/index.html
+++ b/padawan/templates/home/index.html
@@ -13,14 +13,30 @@
     <link rel="stylesheet" href="/static/css/skeleton/skeleton.css">
     <link rel="stylesheet" href="/static/css/padawan.css">
 
-  <!-- Scripts
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
     <link rel="icon" type="image/png" href="/static/images/favicon.ico">
 
 </head>
 <body>
+
+  <div class="section top-menu">
+    <div class="container">
+      <div class="row">
+        <div class="one-third column">
+          <h2 class="top-menu-multiplier">PA·DA·WA·N</h2>
+        </div>
+        <div class="two-thirds column">
+          <nav>
+            <ul>
+              <li>MENU1</li>
+              <li>MENU2</li>
+              <li>MENU3</li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="section hero">
     <div class="container">
       <div class="row">
@@ -36,33 +52,25 @@
     </div>
   </div>
 
-  <div class="section values">
-    <div class="container">
-      <div class="row">
-        <div class="one-third column value">
-          <h2 class="value-multiplier">67%</h2>
-          <h5 class="value-heading">Purchase Increase</h5>
-          <p class="value-description">Percentage of users more likely to purchase on mobile friendly site.</p>
-        </div>
-        <div class="one-third column value">
-          <h2 class="value-multiplier">90%</h2>
-          <h5 class="value-heading">Multi-device Users</h5>
-          <p class="value-description">Most of the world accesses the internet on multiple devices.</p>
-        </div>
-        <div class="one-third column value">
-          <h2 class="value-multiplier">66%</h2>
-          <h5 class="value-heading">Sad Users</h5>
-          <p class="value-description">Percentage of users that are frustrated with page load times.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <div class="section get-help">
     <div class="container">
-      <h3 class="section-heading">Need help getting started?</h3>
-      <p class="section-description">Skeleton is an amazingly easy place to start with responsive development. If you want to learn more, just visit the documentation!</p>
-      <a class="button button-primary" href="http://getskeleton.com">View Skeleton Docs</a>
+      <div class="row">
+        <div class="one-third column">
+          <h2 class="top-menu-multiplier">67%</h2>
+          <h5 class="top-menu-heading">Purchase Increase</h5>
+          <p class="top-menu-description">Percentage of users more likely to purchase on mobile friendly site.</p>
+        </div>
+        <div class="one-third column">
+          <h2 class="top-menu-multiplier">90%</h2>
+          <h5 class="top-menu-heading">Multi-device Users</h5>
+          <p class="top-menu-description">Most of the world accesses the internet on multiple devices.</p>
+        </div>
+        <div class="one-third column">
+          <h2 class="top-menu-multiplier">66%</h2>
+          <h5 class="top-menu-heading">Sad Users</h5>
+          <p class="top-menu-description">Percentage of users that are frustrated with page load times.</p>
+        </div>
+      </div>
     </div>
   </div>
 
