--- a/padawan/templates/home/index.html
+++ b/padawan/templates/home/index.html
@@ -27,9 +27,8 @@
         <div class="two-thirds column">
           <nav>
             <ul>
-              <li>MENU1</li>
-              <li>MENU2</li>
-              <li>MENU3</li>
+              <li><a href="#">MENU2</a></li>
+              <li><a href="#">MENU3</a></li>
             </ul>
           </nav>
         </div>
