--- a/padawan/templates/shared/_layout.html
+++ b/padawan/templates/shared/_layout.html
@@ -23,13 +23,15 @@
     <div class="container">
       <div class="row">
         <div class="one-third column">
-          <h2 class="top-menu-multiplier">PA·DA·WA·N</h2>
+          <h2 class="top-menu-multiplier">
+            <a href="/">PA·DA·WA·N</a>
+          </h2>
         </div>
         <div class="two-thirds column">
           <nav>
             <ul>
               <li><a href="#">MENU2</a></li>
-              <li><a href="#">MENU3</a></li>
+              <li><a href="/about">About</a></li>
             </ul>
           </nav>
         </div>
