--- a/padawan/static/css/padawan.css
+++ b/padawan/static/css/padawan.css
@@ -84,15 +84,16 @@ nav li:hover {
   border-bottom: 1px solid #ddd;
 }
 
-/* Categories
+/* Error
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.categories {
+
+
+/* Footer
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+footer {
   background-image: url('../images/mandalorian_footer.png');
   background-size: cover;
   color: #fff;
-}
-.categories .section-description {
-  margin-bottom: 4rem;
 }
 
 /* Bigger than 550 */
