--- a/padawan/templates/shared/_layout.html
+++ b/padawan/templates/shared/_layout.html
@@ -30,7 +30,7 @@
         <div class="two-thirds column">
           <nav>
             <ul>
-              <li><a href="#">MENU2</a></li>
+              <li><a href="/account/register">Register</a></li>
               <li><a href="/about">About</a></li>
             </ul>
           </nav>
@@ -39,11 +39,14 @@
     </div>
   </div>
 
-  <div class="main-content">
+  <div class="container main-content">
     {% block main_content %}{% endblock %}
   </div>
 
 <footer>
+    <div class="section">
+        Aquí van los enlaces al pie
+    </div>
     <div class="copyright">
         This is a fake site built by me.<br>
     </div>
