--- a/padawan/templates/home/index.html
+++ b/padawan/templates/home/index.html
@@ -8,9 +8,9 @@
           <h4 class="hero-heading">Stop coding non-responsive sites. Let users view sites from anywhere.</h4>
           <a class="button button-primary" href="http://getskeleton.com">{{ grogu }}</a>
         </div>
-        <div class="one-half column phones">
-          <img class="phone" src="/static/images/grogu.png">
-          <img class="phone" src="/static/images/grogu.png">
+        <div class="one-half column grogus">
+          <img class="grogu" src="/static/images/grogu.png">
+          <img class="grogu" src="/static/images/grogu.png">
         </div>
       </div>
     </div>
@@ -20,19 +20,19 @@
     <div class="container">
       <div class="row">
         <div class="one-third column">
-          <h2 class="top-menu-multiplier">67%</h2>
-          <h5 class="top-menu-heading">Purchase Increase</h5>
-          <p class="top-menu-description">Percentage of users more likely to purchase on mobile friendly site.</p>
+          <h2 class="section-multiplier">67%</h2>
+          <h5 class="section-heading">Purchase Increase</h5>
+          <p class="section-description">Percentage of users more likely to purchase on mobile friendly site.</p>
         </div>
         <div class="one-third column">
-          <h2 class="top-menu-multiplier">90%</h2>
-          <h5 class="top-menu-heading">Multi-device Users</h5>
-          <p class="top-menu-description">Most of the world accesses the internet on multiple devices.</p>
+          <h2 class="section-multiplier">90%</h2>
+          <h5 class="section-heading">Multi-device Users</h5>
+          <p class="section-description">Most of the world accesses the internet on multiple devices.</p>
         </div>
         <div class="one-third column">
-          <h2 class="top-menu-multiplier">66%</h2>
-          <h5 class="top-menu-heading">Sad Users</h5>
-          <p class="top-menu-description">Percentage of users that are frustrated with page load times.</p>
+          <h2 class="section-multiplier">66%</h2>
+          <h5 class="section-heading">Sad Users</h5>
+          <p class="section-description">Percentage of users that are frustrated with page load times.</p>
         </div>
       </div>
     </div>
