--- a/padawan/static/css/padawan.css
+++ b/padawan/static/css/padawan.css
@@ -3,6 +3,22 @@
 .button {
   border-radius: 10px;
 }
+.button.button-primary {
+  background-color: #4b6054;
+  border-color: #4b6054;
+}
+.button.button-primary:focus {
+  background-color: #4b6054;
+  border-color: white;
+}
+.button.button-primary:hover {
+  background-color: #67766a;
+  border-color: #67766a;
+}
+
+.main-content {
+  background: bisque;
+}
 
 /* Sections
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -13,19 +29,29 @@
 .section-heading,
 .section-description {
   margin-bottom: 1.2rem;
+  opacity: .8;
+  font-weight: 300;
+}
+.section-multiplier {
+  color: #5d4d50;
+  margin-top: 1.5rem;
+}
+.section-multiplier a{
+    text-decoration:none;
+    color:inherit;
 }
 
 /* Hero
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.phones {
+.grogus {
   position: relative;
 }
-.phone {
+.grogu {
   position: relative;
   max-width: 80%;
   margin: 3rem auto -12rem;
 }
-.phone + .phone {
+.grogu + .grogu {
   display: none;
 }
 
@@ -38,7 +64,8 @@
   padding-bottom: 5rem;
 }
 .top-menu-multiplier {
-  color: #11DFC7;
+  color: bisque;
+  font-family: 'Montserrat Alternates', sans-serif;
   margin-top: 1.5rem;
 }
 .top-menu-multiplier a{
