--- a/padawan/templates/shared/_layout.html
+++ b/padawan/templates/shared/_layout.html
@@ -8,7 +8,9 @@
     <meta name="author" content="@jfcorreas">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+    <link href="//fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/skeleton/normalize.css">
     <link rel="stylesheet" href="/static/css/skeleton/skeleton.css">
     <link rel="stylesheet" href="/static/css/padawan.css">
@@ -39,8 +41,10 @@
     </div>
   </div>
 
-  <div class="container main-content">
-    {% block main_content %}{% endblock %}
+  <div class="main-content">
+      <div class="container">
+        {% block main_content %}{% endblock %}
+      </div>
   </div>
 
 <footer>
