--- a/padawan/templates/home/about.html
+++ b/padawan/templates/home/about.html
@@ -2,6 +2,8 @@
 
 {% block main_content %}
 
-<h4>@jfcorreas python assistant data aggregation web application notebook</h4>
+<div class="section-heading">
+    <h4>@jfcorreas python assistant data aggregation web application notebook</h4>
+</div>
 
 {% endblock %}
