Created user_service.py and completed registering new user in BD

--- a/padawan/templates/shared/_layout.html
+++ b/padawan/templates/shared/_layout.html
@@ -47,9 +47,9 @@
     <footer>
         <div class="section">
             Aquí van los enlaces al pie
-        </div>
-        <div class="copyright">
-            This is a fake site built by me.<br>
+            <div class="copyright">
+                Developed by @jfcorreas
+            </div>
         </div>
     </footer>
 
