--- a/padawan/templates/shared/_layout.html
+++ b/padawan/templates/shared/_layout.html
@@ -31,7 +31,7 @@
             <div class="two-thirds column">
               <nav>
                 <ul>
-                  <li><a href="/account/register">Register</a></li>
+                  <li><a href="/account/login">Login</a></li>
                   <li><a href="/about">About</a></li>
                 </ul>
               </nav>
