--- a/padawan/templates/account/index.html
+++ b/padawan/templates/account/index.html
@@ -8,6 +8,7 @@
         <div>
             Welcome to your account {{ user.name }}!
         </div>
+        <a href="/account/logout" class="button button-primary">Disconnect</a>
     </div>
 {% endblock %}
 
