--- a/padawan/templates/account/login.html
+++ b/padawan/templates/account/login.html
@@ -12,6 +12,7 @@
             <input name="password" type="password" placeholder=" Password" class="u-full-width"
                    value="{{ password }}" required>
             <button type="submit" class="button button-primary">Login</button>
+            <a href="/account/register" class="button">New User</a>
 
             {% if error %}
                 <div class="error-msg">{{ error }}</div>
