--- a/padawan/templates/shared/_layout.html
+++ b/padawan/templates/shared/_layout.html
@@ -32,11 +32,11 @@
               <nav>
                 <ul>
                 {% if user_id %}
-                    <li><a href="/account">Account</a></li>
+                    <li><a href="/account" class="button">Account</a></li>
                 {% else %}
-                    <li><a href="/account/login">Login</a></li>
+                    <li><a href="/account/login" class="button">Login</a></li>
                 {% endif %}
-                  <li><a href="/about">About</a></li>
+                  <li><a href="/about" class="button">About</a></li>
                 </ul>
               </nav>
             </div>
