--- a/padawan/static/css/padawan.css
+++ b/padawan/static/css/padawan.css
@@ -28,7 +28,7 @@
 /* Sections
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .section {
-  padding: 8rem 0 7rem;
+  padding: 1rem 0 0;
   text-align: center;
 }
 .section-heading,
@@ -43,10 +43,10 @@
   margin-top: 1.5rem;
 }
 .section-multiplier a{
-    text-decoration:none;
-    color:inherit;
+  text-decoration:none;
+  color:inherit;
 }
-.section.account-form {
+.section .account-form {
   max-width: 400px;
   margin: auto;
 }
@@ -78,8 +78,9 @@
   margin-top: 1.5rem;
 }
 .top-menu-multiplier a{
-    text-decoration:none;
-    color:inherit;
+  text-decoration:none;
+  color:inherit;
+  font-size: 4.2rem;
 }
 .top-menu-heading {
   margin-bottom: .3rem;
@@ -88,30 +89,23 @@
   opacity: .8;
   font-weight: 300;
 }
+header .button {
+  padding: 0 10px;
+  border: 1px solid white;
+  color: white;
+}
+header .button:hover {
+  border: 1px solid white;
+  background-color: white;
+  color: #393033;
+}
 nav {
-    margin-top: 2.5rem;
-}
-nav li a {
-    text-decoration:none;
-    color:inherit;
-    font-size:14px;
-}
-nav li a:hover {
-    text-decoration:none;
-    color:inherit;
-    font-size:14px;
+  margin-top: 2rem;
 }
 nav li{
-    display:inline-block;
-    width:20%;
-    border: 1px solid white;
-    border-radius: 10px;
-    padding:5px 10px;
-    text-align:center;
-}
-nav li:hover {
-    background-color:#fff;
-    color: #393033;
+  display:inline-block;
+  padding:5px 10px;
+  text-align:center;
 }
 
 /* Help
@@ -138,13 +132,15 @@ footer {
 /* Bigger than 550 */
 @media (min-width: 550px) {
   .section {
-    padding: 2rem 0 1rem;
+    padding: 3rem 0 2rem;
   }
+
   .hero {
     padding-bottom: 12rem;
     text-align: left;
     height: 165px;
   }
+
   .phone {
     position: absolute;
     top: -7rem;
@@ -152,6 +148,7 @@ footer {
     max-height: 362px;
     z-index: 3;
   }
+
   .phone + .phone {
     top: -6rem;
     display: block;
@@ -160,11 +157,17 @@ footer {
     z-index: 2;
     max-height: 338px;
   }
+
   .hero-heading {
     font-size: 2.4rem;
   }
+
   .top-menu {
     text-align: right;
+  }
+
+  .top-menu-multiplier a {
+    font-size: 2.2rem;
   }
 }
 
@@ -175,9 +178,6 @@ footer {
   }
   .hero-heading {
     font-size: 2.6rem;
-  }
-  .section {
-    padding: 2rem 0 1rem;
   }
   .hero {
     padding: 16rem 0 14rem;
@@ -199,13 +199,13 @@ footer {
   .categories {
     padding: 15rem 0 8rem;
   }
+  .top-menu-multiplier a{
+    font-size: 3.2rem;
+  }
 }
 
 /* Bigger than 1000 */
 @media (min-width: 1000px) {
-  .section {
-    padding: 2rem 0 1rem;
-  }
   .hero {
     padding: 22rem 0;
   }
@@ -219,5 +219,8 @@ footer {
   .phone + .phone {
     top: -14rem;
     max-height: 570px;
+  }
+  .top-menu-multiplier a{
+    font-size: 4.2rem;
   }
 }
