--- a/padawan/templates/account/index.html
+++ b/padawan/templates/account/index.html
@@ -2,8 +2,8 @@
 {% block title %}Welcome Young Padawan{% endblock %}
 
 {% block main_content %}
-    <div class="section">
-        <h1>Your PA·DA·WA·N Account</h1>
+    <div class="section section-heading">
+        <h2>Your PA·DA·WA·N Account</h2>
 
         <div>
             Welcome to your account {{ user.name }}!
