--- a/padawan/static/css/padawan.css
+++ b/padawan/static/css/padawan.css
@@ -12,6 +12,9 @@
 .button.button-primary:focus {
   background-color: #4b6054;
   border-color: white;
+  border-style: double;
+  border-width: 3px;
+  line-height: 34px;
 }
 .button.button-primary:hover {
   background-color: #67766a;
@@ -46,7 +49,7 @@
   text-decoration:none;
   color:inherit;
 }
-.section .account-form {
+.section.account-form {
   max-width: 400px;
   margin: auto;
 }
@@ -94,7 +97,8 @@ header .button {
   border: 1px solid white;
   color: white;
 }
-header .button:hover {
+header .button:hover,
+header .button:focus {
   border: 1px solid white;
   background-color: white;
   color: #393033;
