Added Redirect model, alter User model and restart alembic from scratch

--- a/padawan/static/css/padawan.css
+++ b/padawan/static/css/padawan.css
@@ -49,7 +49,7 @@
   text-decoration:none;
   color:inherit;
 }
-.section.account-form {
+.section.generic-form {
   max-width: 400px;
   margin: auto;
 }
