--- a/padawan/templates/account/register.html
+++ b/padawan/templates/account/register.html
@@ -5,7 +5,7 @@
     <div class="section section-heading">
         <h2>Register new Padawan</h2>
     </div>
-    <div class="section account-form">
+    <div class="section generic-form">
         <form action="" method="POST">
             <input name="name" type="text" placeholder=" Your name" class="u-full-width" value="{{ name }}"
                    required>
