--- a/padawan/templates/shared/_layout.html
+++ b/padawan/templates/shared/_layout.html
@@ -33,6 +33,7 @@
                 <ul>
                 {% if user_id %}
                     <li><a href="/account" class="button">Account</a></li>
+                    <li><a href="/admin/redirects" class="button">Redirects</a></li>
                 {% else %}
                     <li><a href="/account/login" class="button">Login</a></li>
                 {% endif %}
