--- a/padawan/templates/admin/redirects.html
+++ b/padawan/templates/admin/redirects.html
@@ -8,7 +8,7 @@
         {% for r in redirects %}
             <li>
                 <span>{{ r.name }} - </span>
-                <a href="/{{ r.short_url }}">/{{ r.short_url }}</a>
+                <a href="/{{ r.short_url }}" target="_blank">/{{ r.short_url }}</a>
             </li>
         {% endfor %}
     </ul>
