--- a/padawan/templates/account/index.html
+++ b/padawan/templates/account/index.html
@@ -5,7 +5,7 @@
     <div class="section section-heading">
         <h2>Your PA·DA·WA·N Account</h2>
 
-        <div>
+        <div class="section-description">
             Welcome to your account {{ user.name }}!
         </div>
         <a href="/account/logout" class="button button-primary">Disconnect</a>
