Managing error 403 view

--- a/padawan/templates/errors/404.html
+++ b/padawan/templates/errors/404.html
@@ -1,5 +1,5 @@
 {% extends "shared/_layout.html" %}
-{% block title %}Error Young PA·DA·WA·N{% endblock %}
+{% block title %}Wrong Way{% endblock %}
 
 {% block main_content %}
     <div class="section error404">
