--- a/padawan/templates/admin/publications.html
+++ b/padawan/templates/admin/publications.html
@@ -12,6 +12,7 @@
                 <th>Short URL</th>
                 <th>Created</th>
                 <th>Last Update</th>
+                <th>Actions</th>
             </tr>
     </thead>
         {% for p in publications %}
@@ -27,9 +28,10 @@
                 </td>
                 <td>{{ p.created_date }}</td>
                 <td>{{ p.updated_date }}</td>
+                <td><a href="/admin/edit_publication/{{ p.id }}" class="button">Edit</a></td>
             </tr>
         {% endfor %}
     </table>
-    <a href="/admin/edit_publication" class="button">New Publication</a>
+    <a href="/admin/add_publication" class="button button-primary">New Publication</a>
 </div>
 {% endblock %}
