--- a/padawan/templates/home/index.html
+++ b/padawan/templates/home/index.html
@@ -1,12 +1,12 @@
 {% extends "shared/_layout.html" %}
 
 {% block main_content %}
-  <div class="section hero">
+<div class="section hero">
     <div class="container">
       <div class="row">
         <div class="one-half column">
-          <h4 class="hero-heading">Stop coding non-responsive sites. Let users view sites from anywhere.</h4>
-          <a class="button button-primary" href="http://getskeleton.com">{{ grogu }}</a>
+          <h4 class="hero-heading">@jfcorreas python assistant data aggregation web application notebook</h4>
+          <a class="button button-primary" href="/publications">Publications</a>
         </div>
         <div class="one-half column grogus">
           <img class="grogu" src="/static/images/grogu.png">
@@ -14,42 +14,6 @@
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="section get-help">
-    <div class="container">
-      <div class="row">
-        <div class="one-third column">
-          <h2 class="section-multiplier">67%</h2>
-          <h5 class="section-heading">Purchase Increase</h5>
-          <p class="section-description">Percentage of users more likely to purchase on mobile friendly site.</p>
-        </div>
-        <div class="one-third column">
-          <h2 class="section-multiplier">90%</h2>
-          <h5 class="section-heading">Multi-device Users</h5>
-          <p class="section-description">Most of the world accesses the internet on multiple devices.</p>
-        </div>
-        <div class="one-third column">
-          <h2 class="section-multiplier">66%</h2>
-          <h5 class="section-heading">Sad Users</h5>
-          <p class="section-description">Percentage of users that are frustrated with page load times.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="section categories">
-    <div class="container">
-      <h3 class="section-heading">Responsive Images</h3>
-      <p class="section-description">Skeleton images sit easily in grid with .u-max-full-width class. I suggest exploring solution to serving different images based on device size.</p>
-      <div class="row">
-        <div class="one-half column category">
-          <img class="u-max-full-width" src="/static/images/mandalorian1.png">
-        </div>
-        <div class="one-half column category">
-          <img class="u-max-full-width" src="/static/images/mandalorian2.png">
-        </div>
-      </div>
-    </div>
-  </div>
+    <h4></h4>
+</div>
 {% endblock %}
