Improve table and dates presentation

--- a/padawan/static/css/padawan.css
+++ b/padawan/static/css/padawan.css
@@ -28,6 +28,11 @@
 
 }
 
+table {
+  display: block;
+  overflow-x: auto;
+}
+
 /* Sections
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .section {
