--- a/padawan/templates/admin/index.html
+++ b/padawan/templates/admin/index.html
@@ -5,9 +5,7 @@
 
 <div class="section hero-heading">
     <h2>Teaching padawans</h2>
-    <ul>
-        <li><a href="/admin/publications" class="button">Publications</a></li>
-        <li><a href="/admin/redirects" class="button">Redirects</a></li>
-    </ul>
+    <a href="/admin/publications" class="button">Publications</a>
+    <a href="/admin/redirects" class="button">Redirects</a>
 </div>
 {% endblock %}
