--- a/padawan/templates/admin/publications.html
+++ b/padawan/templates/admin/publications.html
@@ -7,8 +7,8 @@
     <table>
         <thead>
             <tr>
+                <th>ID</th>
                 <th>Title</th>
-                <th>Publication ID</th>
                 <th>Short URL</th>
                 <th>Created</th>
                 <th>Last Update</th>
@@ -17,17 +17,19 @@
     </thead>
         {% for p in publications %}
             <tr>
-                <td>{{ p.title }}</td>
                 <td>
                     <a href="/publications/{{ p.id }}" target="_self">{{ p.id }}</a>
+                </td>
+                <td>
+                    <a href="/publications/{{ p.id }}" target="_self">{{ p.title[:50] }}</a>
                 </td>
                 <td>
                     {% if p.short_url %}
                         <a href="/{{ p.short_url }}" target="_self">/{{ p.short_url }}</a>
                     {% endif %}
                 </td>
-                <td>{{ p.created_date }}</td>
-                <td>{{ p.updated_date }}</td>
+                <td>{{ p.created_date | date_type('full') }}</td>
+                <td>{{ p.updated_date | date_type('delta') }}</td>
                 <td><a href="/admin/edit_publication/{{ p.id }}" class="button">Edit</a></td>
             </tr>
         {% endfor %}
