--- a/padawan/templates/admin/edit_publication.html
+++ b/padawan/templates/admin/edit_publication.html
@@ -6,27 +6,32 @@
 
         <h2>{{ "Edit" if publication_id else "Add"}} Publication</h2>
 
-        <div class="section generic-form">
+        <label class="section generic-form">
             <form action="" method="POST">
+                <label for="title">Title</label>
                 <input class="u-full-width" type="text"
                        id= "title" name="title"
                        title="Title of the Publication"
                        placeholder="Title of the Publication"
                        value="{{ title }}" required>
+                <label for="contents">Content</label>
                 <textarea class="u-full-width" cols="50" rows="15"
                        id= "contents" name="contents"
                        title="Contents (HTML) of the publication"
                        placeholder="Contents (HTML) of this publication">
                         {{ content }}
                 </textarea>
+                <label for="short_url">Short URL (Optional)</label>
                 <input class="u-full-width" type="text"
                        id= "short_url" name="short_url"
                        title="Short URL"
                        placeholder="Short URL for the Publication (Optional)"
                        value="{{ short_url }}">
-                <input type="checkbox" id="is_snippet" name="is_snippet"
-                    {% if is_snippet %}checked{% endif %}>
-                <label for="is_snippet">Snippet content</label>
+                <label>
+                    <input type="checkbox" id="is_snippet" name="is_snippet"
+                           {% if is_snippet %}checked{% endif %}>
+                    <span>This publication is a Snippet</span>
+                </label>
                 <button type="submit" class="button button-primary">
                     {{ "Edit" if publication_id else "Add"}}
                 </button>
