--- a/padawan/templates/shared/_layout.html
+++ b/padawan/templates/shared/_layout.html
@@ -57,6 +57,11 @@
             <div class="copyright">
                 Developed by @jfcorreas
             </div>
+            <div>
+                Icons made by
+                <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a>
+                from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+            </div>
         </div>
     </footer>
 
